--- a/.github/workflows/web-server.yaml
+++ b/.github/workflows/web-server.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ${{ github.workspace}}/Kent-COMP8920-assessment-2/targets/web-server/
+          file: ${{ github.workspace}}/Kent-COMP8920-assessment-2/targets/web-server/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
