--- a/.github/workflows/web-server.yaml
+++ b/.github/workflows/web-server.yaml
@@ -44,6 +44,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           file: ${{ github.workspace }}/targets/web-server/Dockerfile
+          context: ${{ github.workspace }}/targets/web-server
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
