remove label from github action metadata

--- a/.github/workflows/web-server.yaml
+++ b/.github/workflows/web-server.yaml
@@ -40,5 +40,4 @@ jobs:
           file: ${{ github.workspace }}/targets/web-server/Dockerfile
           context: ${{ github.workspace }}/targets/web-server
           push: true
-          tags: "web-server"
-          labels: "latest"
+          tags: "user/web-server:latest"
