Update Namespace for webserver push

--- a/.github/workflows/web-server.yaml
+++ b/.github/workflows/web-server.yaml
@@ -40,4 +40,4 @@ jobs:
           file: ${{ github.workspace }}/targets/web-server/Dockerfile
           context: ${{ github.workspace }}/targets/web-server
           push: true
-          tags: "user/web-server:latest"
+          tags: "Cavonstavant/web-server:latest"
