targets(web_server): Add label to Dockerfile

--- a/targets/web_server/Dockerfile
+++ b/targets/web_server/Dockerfile
@@ -1,5 +1,6 @@
-
 FROM python:3.9-slim
+
+LABEL org.opencontainers.image.source=https://github.com/Cavonstavant/Kent-COMP8920-assessment-2
 
 WORKDIR /app
 
