--- a/.github/workflows/web-server.yaml
+++ b/.github/workflows/web-server.yaml
@@ -31,8 +31,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: Cavonstavant
-          password: ${{ secrets.GH_PAT }}
+          username: ${{ github.repository_owner}}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -40,4 +40,4 @@ jobs:
           file: ${{ github.workspace }}/targets/web_server/Dockerfile
           context: ${{ github.workspace }}/targets/web_server
           push: true
-          tags: "cavonstavant/web_server:latest"
+          tags: "ghcr.io/cavonstavant/web_server:latest"
